[project]
name = "bike-rental-analysis"
version = "0.1.0"
description = "Bike Rental Analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "streamlit>=1.44.1",
    "tabulate>=0.9.0",
]
